--- a/style/assignment.css
+++ b/style/assignment.css
@@ -25,8 +25,8 @@
 
 }
 
-/* banner contant */
-.banner-container{
+/* banner */
+.banner{
     width: 1280px;
     height: 560px;
     border: 1px solid #006A50;
@@ -34,4 +34,10 @@
     margin-right: auto;
     border-radius: 24px;
     margin-top: 20px;
+    background-color:#C6E4D6;
+}
+.banner-pic{
+    display: flex;
+    
+    
 }
