--- a/style/assignment.css
+++ b/style/assignment.css
@@ -1,4 +1,10 @@
-  /* marzin */
+/* 'Fira Sans' */
+.fira-sans-normal{
+    font-family: "Fira Sans", sans-serif;
+  }
+
+
+/* marzin */
 * {
     margin: 0px;
     padding: 0px;
@@ -27,17 +33,42 @@
 
 /* banner */
 .banner{
+    display: flex;
     width: 1280px;
     height: 560px;
     border: 1px solid #006A50;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
     border-radius: 24px;
     margin-top: 20px;
     background-color:#C6E4D6;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
 }
-.banner-pic{
-    display: flex;
-    
-    
+.banner-contant{
+    align-items: center;
+    margin: 100px 60px;
+}
+.Explore-btn{
+    width: 270px;
+    height: 56px;
+    margin-top: 24px;
+    color:#FFFFFF;
+    background-color: #006A50;
+    border-radius: 8px;
+    padding: 18px 35px;
+    border: none;
+}
+.banner img{
+    width: 470px;
+    height: 400px;
+    margin: 80px 80px;
+}
+.banner-text{
+    margin-bottom: 16px;
+}
+
+.banner-description{
+    margin-bottom: 24px;
 }
